Established MongoDB connection and implemented 'Create' functionality
Successfully established a connection with MongoDB and implemented the 'Create' functionality to add data to the database. This commit includes the necessary code changes to create new records in the database, completing the 'C' part of CRUD operations.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,18 @@
-<h1>Hello There to do</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Add Task</title>
+</head>
+<body>
+    <h1>Add Task</h1>
+    <form action="/add" method="POST">
+        <label for="title">Title:</label><br>
+        <input type="text" id="title" name="title"><br>
+        <label for="description">Description:</label><br>
+        <textarea id="description" name="description"></textarea><br>
+        <button type="submit">Add Task</button>
+    </form>
+</body>
+</html>
