--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,18 +6,10 @@
     <title>Add Task</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        /* Custom CSS */
-        .fixed-top {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 1000; /* Ensure it's above other content */
-        }
-    </style>
+    <link rel="stylesheet" href="/css/navbar.css">
 </head>
 <body>
+    <%- include('./includes/navbar.ejs') %>
     <div class="container mt-5">
         <div class="card">
             <div class="card-body">
@@ -37,7 +29,14 @@
         </div>
     </div>
     <div class="container mt-5">
+        <% if (tasks.length > 0) { %> <!-- Check if there are tasks -->
+            <form action="/delete-all-tasks" method="POST"> <!-- Form to delete all tasks -->
+                <button type="submit" class="btn btn-danger mb-3">Delete All</button>
+            </form>
+        <% }
+        var i = 0; %>
         <% for (let task of tasks) { %>
+            <h1>Task: <%= i+1 %></h1>
             <div class="row mb-3">
                 <div class="col-12">
                     <div class="card">
@@ -51,17 +50,17 @@
                             <button class="btn btn-primary" onclick="showEditForm('<%= task._id %>')">Edit</button>
                         </div>
                         <!-- Edit form (initially hidden) -->
-                        <div id="editForm_<%= task._id %>" class="card-body" style="display: none;">
+                        <div id="editForm_<%= task._id %>" class="card-body edit-form-card mx-auto" style="display: none;">
                             <div class="card p-3">
                                 <form action="/edit-task" method="POST">
                                     <input type="hidden" name="taskId" value="<%= task._id %>">
                                     <div class="mb-3">
                                         <label for="editTitle" class="form-label">New Title:</label>
-                                        <input type="text" id="editTitle" name="editTitle" class="form-control">
+                                        <input type="text" id="editTitle" name="editTitle" class="form-control" value="<%= task.title %>">
                                     </div>
                                     <div class="mb-3">
                                         <label for="editDescription" class="form-label">New Description:</label>
-                                        <textarea id="editDescription" name="editDescription" class="form-control"></textarea>
+                                        <textarea id="editDescription" name="editDescription" class="form-control"><%= task.description %></textarea>
                                     </div>
                                     <div class="d-grid">
                                         <button type="submit" class="btn btn-primary">Update</button>
@@ -72,7 +71,9 @@
                     </div>
                 </div>
             </div>
-        <% } %>
+        <% 
+        i++;
+    } %>
     </div>
     <!-- Bootstrap JS (Optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
