--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,1 +1,16 @@
-<h1>error</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign Up</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/navbar.css">
+</head>
+
+<body>
+    <%- include('./includes/navbar.ejs') %>
+        <h1>error</h1>
+</body>
