--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -12,6 +12,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Sign In</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/signup">Sign Up</a>
+                </li>
             </ul>
         </div>
     </div>
