--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,9 @@
 </head>
 <body>
     <%- include('./includes/navbar.ejs') %>
-    <h1 class="container mt-5"><%= userName %></h1>
+    <% if(isAuth) { %>
+        <h1 class="container mt-5"><%= userName %></h1> 
+    <% } %>
     <div class="container mt-5">
         <div class="card">
             <div class="card-body">
