--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -12,12 +12,22 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
                 </li>
+                <% if(!isAuth) { %>
                 <li class="nav-item">
                     <a class="nav-link" href="/login">Sign In</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/signup">Sign Up</a>
                 </li>
+                <% } %>
+                <% if(isAuth) { %>
+                <li class="nav-item">
+                    <form action="/logout" method="post">
+                        <button type="submit" class="nav-link">Log Out</button>
+                    </form>
+                    <!-- <a class="nav-link" href="/logout">Log Out</a> -->
+                </li>
+                <% } %>
             </ul>
         </div>
     </div>
