--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -25,10 +25,10 @@
                                 <label for="email">Email:</label>
                                 <input type="email" class="form-control" id="email" name="email" required>
                             </div>
-                            <!-- <div class="form-group">
+                            <div class="form-group">
                                 <label for="password">Password:</label>
                                 <input type="password" class="form-control" id="password" name="password" required>
-                            </div> -->
+                            </div>
                             <button type="submit" class="btn btn-primary btn-block mt-2">Sign Up</button>
                         </form>
                     </div>
