Just trying to statically get image to client side.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/navbar.css">
 </head>
 <body>
+    <!-- <img src="/images/asd.jpg" width="100" height="100"> -->
     <%- include('./includes/navbar.ejs') %>
     <% if(isAuth) { %>
         <h1 class="container mt-5"><%= userName %></h1> 
